Fixed some white space issues in headers.

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -150,6 +150,10 @@ dl.question-list {
   }
 }
 
+.artifact-of-the-day h1 {
+  margin-bottom: 20px;
+}
+
 @media (max-width: 480px) {
   .navbar .brand {
     text-align: center;
@@ -157,5 +161,9 @@ dl.question-list {
   }
   .artifact-name {
     text-align: center;
+  }
+  .artifact-of-the-day h1 {
+    text-align: center;
+    margin-bottom: 10px;
   }
 }
